Bug 1618179 - Fix the "Sort by" dropdown being actuated by clicking outside of its surrounding hover area r=jaws
Also add a 2px margin after the "Sort by" text to avoid having dropdown's focus ring being too close to the "Sort by" text.

Differential Revision: https://phabricator.services.mozilla.com/D65157

UltraBlame original commit: 9f81cd5d2a687c5be410fcc0d14967f8aedab653

--- a/browser/components/aboutlogins/content/components/login-list.css
+++ b/browser/components/aboutlogins/content/components/login-list.css
@@ -96,7 +96,7 @@ center
 ;
 padding
 :
-5px
+9px
 16px
 ;
 border
@@ -161,6 +161,22 @@ size
 8em
 ;
 }
+.
+meta
+>
+label
+>
+span
+{
+margin
+-
+inline
+-
+end
+:
+2px
+;
+}
 #
 login
 -
@@ -173,10 +189,6 @@ color
 transparent
 ;
 margin
--
-inline
--
-start
 :
 0
 ;
